samples/_failures_safe/1760884850_bbc914_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c604e138.c:151:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 | int tokenize_next
      | ^~~
